--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ phone: +91 7738480790
 # website: Your website (eg. https://google.com)(optional)
 
 # Dark Mode (true/false/never)
-darkmode: never
+darkmode: true
 
 # Social links
 twitter_username: jekyllrb
