--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ stackoverflow_username: "8643167"
 facebook_username: tejeshjadhav.tj
 # flickr_username: jekyll
 instagram_username: __tejesh_jadhav
-linkedin_username: in/tejeshjadhav
+linkedin_username: tejeshjadhav
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
